--- a/styles/behandlingarstyles.css
+++ b/styles/behandlingarstyles.css
@@ -9,7 +9,7 @@
 
 /* Ta bort nedan om det inte gör ngt */
 body{
-  width: 90%;
+  width: 100%;
 }
 
 header{
@@ -222,22 +222,6 @@ header h4{
   }
   
   
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*#endregion  */
 
@@ -247,7 +231,6 @@ header h4{
 {
   text-align: center;
   padding-top: 20px;
-  margin-left: 35%;
 }
 
 .container1 {
@@ -264,15 +247,15 @@ header h4{
 #niceHair
   {
     margin-top: 2%;
-    width: 90%;
+    width: 100%;
     height: 60%;
     background-color:rgb(234,233,239,255);
   }
 
 #hairPic {
-  width: 97vh; 
+  width: auto;
+  margin-left: 45%;
   height:60vh;
-  margin-left: 49%;
 }
 
 #behandlingMainInfo
@@ -320,11 +303,11 @@ header h4{
   #behandlingsRubrik
   {
     margin-top: 0%;
-    text-align: center;
     margin-left: 5%;
   }
 
-  .container1{  margin-left: 0%;
+  .container1{  
+    margin-left: 0%;
   }
 
   .container1 #behandlingsRubrik
@@ -349,15 +332,16 @@ header h4{
 .container
 {
     width: 100%;
-    margin-left: 3%;
 }
 
 
 #infoCard
 {
-  margin-top: 10%;
+  margin-top: 10%;  
   height: fit-content;
   color: #616466;
+  text-align: center;
+  margin-left: 5%;
 }
 
 #blueText
@@ -375,7 +359,6 @@ header h4{
 {
     margin-top: 2%;
     width: 100%;
-    margin-left: 7%;
     
 }
 
@@ -397,28 +380,29 @@ header h4{
   }
 }
 
-
-
-
-
-
 /* #endregion */
 
 
 
 /* #region Informationsbilder funnnyimage från lifetime */
 
+
+.row
+{
+width: 100%;
+padding-bottom: 50px;
+}
+
 .funnyImage
 {
 
-  width: 25%;
+  width: 20%;
   height: auto;
 
 
 }
 .funnyImageTextDiv{
   margin-top: 10%;
-  margin-left: 5%;
   text-align: center;
 }
 
@@ -443,16 +427,9 @@ header h4{
 }
 
 
-
-
-
-
-
-
-
 .accordion{
-  margin-left:10%;
   padding-bottom: 50px;
+  width: 100%;
 }
 
 .accordion-button:not(.collapsed){
@@ -478,7 +455,7 @@ header h4{
 
 footer{ 
   margin-top: 0%;
-  width:111%;
+  width:100%;
 
 }
 
