--- a/styles/behandlingarstyles.css
+++ b/styles/behandlingarstyles.css
@@ -322,6 +322,14 @@ header h4{
     font-size: 22px;
   }
 
+  .nav-links
+  {
+
+    box-shadow: inset 0 3px 6px rgba(0,0,0,0.16), 0 4px 6px rgba(0,0,0,0.45);
+    border-radius: 10px;
+
+  }
+
 }
 
 
@@ -343,6 +351,18 @@ header h4{
   text-align: center;
   margin-left: 5%;
 }
+
+
+#infocardBooka
+{
+  
+    /*Button design på infocard*/
+
+
+}
+
+
+
 
 #blueText
 {
