--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,7 +102,7 @@ header h4{
   position:absolute;
   right:0;
   top: 5vh;
-  width: 60%;
+  width: 50%;
   height:70vh;
   background: rgb(217, 213, 213);
 
@@ -196,8 +196,8 @@ header ul li a:hover{
   background-size:contain;
   background-repeat:no-repeat;
   background-position:center;
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
   cursor:pointer;
   transition:250ms ease-in-out;
   
@@ -212,6 +212,10 @@ header ul li a:hover{
 /* För större skärm */
 
 @media screen and (min-width:1000px){
+
+
+
+
 
   .nav-links{
 
@@ -249,7 +253,7 @@ header ul li a:hover{
   }
 
   .logoNav{
-    font-size:23px;
+    font-size:20px;
   }
 
 
@@ -378,7 +382,24 @@ i{
     transform: translate(-50%, -70%); /* center the button */
     font-size: 3vw; /* adjust as needed */
     padding: 5px 10px; /* adjust as needed */
+
   }
+
+
+    /* 3D EFFECT på hamburgarmenyn*/
+  .nav-links{
+
+    box-shadow: inset 0 3px 6px rgba(0,0,0,0.16), 0 4px 6px rgba(0,0,0,0.45);
+    border-radius: 10px;
+  
+
+
+  }
+ 
+
+
+
+
 }
 
 
