--- a/styles/behandlingarstyles.css
+++ b/styles/behandlingarstyles.css
@@ -357,9 +357,30 @@ header h4{
 {
   
     /*Button design på infocard*/
+  background-color: #cfcfcf;
+  border-radius: 100px;
+  box-shadow: rgba(118, 118, 118, 0.2) 0 -25px 18px -14px inset,
+    rgba(132, 132, 132, 0.15) 0 1px 2px,
+    rgba(110, 110, 110, 0.15) 0 2px 4px,
+    rgba(118, 119, 119, 0.15) 0 4px 8px,
+    rgba(133, 134, 134, 0.15) 0 8px 16px,
+    rgba(146, 146, 146, 0.15) 0 16px 32px;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+  padding: 7px 20px;
+  text-decoration: none;
+  transition: all 250ms;
+  border:0;
+  font-size: 12px; /* adjust as needed */
+}
+#infocardBooka:hover
+{
 
+  background-color: rgb(60, 224, 60);
 
 }
+
 
 
 
