--- a/styles/priserstyles.css
+++ b/styles/priserstyles.css
@@ -1,3 +1,4 @@
+/* #region Intro */
 *{
   margin:0;
   padding:0;
@@ -169,6 +170,8 @@ header ul li a:hover{
 
 
 
+
+
 /* För större skärm */
 
 @media screen and (min-width:1000px){
@@ -212,10 +215,44 @@ header ul li a:hover{
     font-size:23px;
   }
 
-
-  /* Mobilainställningar ;) */
+ 
 
 }
+
+
+@media (max-width: 800px) 
+{
+
+
+  .nav-links{
+
+    box-shadow: inset 0 3px 6px rgba(0,0,0,0.16), 0 4px 6px rgba(0,0,0,0.45);
+    border-radius: 10px;
+  
+
+
+  }
+
+
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/*#endregion  */
+
 
 .accordion
 {
@@ -241,15 +278,28 @@ header ul li a:hover{
 /* CSS code */
 .image-wrapper {
   width: 100%;
-  height: auto;
-  overflow: hidden; /* hide any overflowing parts of the image */
+  height: 50vh; /* set the height to 30% of the viewport height */
+  overflow: hidden;
   text-align: center;
 }
 
 img {
   width: 100%;
-  height:40%;
-  object-fit: cover; /* adjust how the image fills the container */
-
+  height: 100%;
+  object-fit: cover;
 }
+
+@media screen and (max-width: 768px) {
+  .image-wrapper {
+    height: 50vh;
+  }
+}
+
+#prisrubrik{
+  font-size: 22px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
 
