--- a/styles/omstyles.css
+++ b/styles/omstyles.css
@@ -1,178 +1,471 @@
 /* #region Intro */
 *{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-    font-family: 'Poppins', sans-serif;
-  }
-  
-  /* Ta bort nedan om det inte gör ngt */
-  body{
-  width: 100%;
-  }
-  
-  header{
-  
-  display:flex;
-  justify-content: space-between;
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+/* Ta bort nedan om det inte gör ngt */
+body{
+width: 100%;
+}
+
+header{
+
+display:flex;
+justify-content: space-between;
+align-items: center;
+padding: 10px 30px;
+position: fixed;
+width:100%;
+top:0;
+padding: 2;
+transition:250ms;
+z-index:10;  
+background-color:whitesmoke;
+}
+
+header h4{
+
+  position: absolute;
+  left: 10%;
+  bottom: 1rem;
+  font-size: 1.6rem;
+}
+
+#MainLogo
+{
+color:black;
+}
+
+#MainLogo:hover
+{
+color:#616466;
+font-size: 20px; 
+}
+/* #endregion*/
+
+
+/*#region Nav*/
+
+
+#bokaText{
+  color:darkgreen;
+}
+#bokaText:hover{
+  color:lightgreen;
+}
+
+
+.nav-links{
+
+  position:absolute;
+  right:0;
+  top: 5vh;
+  width: 60%;
+  height:70vh;
+  background: rgb(217, 213, 213);
+
+  display:none;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  padding: 10px 30px;
-  position: fixed;
-  width:100%;
-  top:0;
-  padding: 2;
-  transition:250ms;
-  z-index:10;  
-  background-color:whitesmoke;
+  animation:menu_animation 500ms
+  ease-in-out;
+}
+
+
+.show-navlinks{
+
+  display: flex;
+
+}
+
+
+@keyframes menu_animation{
+
+  from{
+
+    opacity:0;
+    tranform:translateX(100%);
+
   }
-  
-  header h4{
-  
-    position: absolute;
-    left: 10%;
-    bottom: 1rem;
-    font-size: 1.6rem;
+
+  to{
+    opacity:1;
+    tranform:translateX(0%);
   }
-  
-  #MainLogo
-  {
-  color:black;
-  }
-  
-  #MainLogo:hover
-  {
-  color:#616466;
-  font-size: 20px; 
-  }
-  /* #endregion*/
-  
-  
-  /*#region Nav*/
-  
-  
-  #bokaText{
-    color:darkgreen;
-  }
-  #bokaText:hover{
-    color:lightgreen;
-  }
-  
-  
-  .nav-links{
-  
-    position:absolute;
-    right:0;
-    top: 5vh;
-    width: 60%;
-    height:70vh;
-    background: rgb(217, 213, 213);
-  
-    display:none;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    animation:menu_animation 500ms
-    ease-in-out;
-  }
-  
-  
-  .show-navlinks{
-  
-    display: flex;
-  
-  }
-  
-  
-  @keyframes menu_animation{
-  
-    from{
-  
-      opacity:0;
-      tranform:translateX(100%);
-  
-    }
-  
-    to{
-      opacity:1;
-      tranform:translateX(0%);
-    }
-  
-  }
-  
-  
-  .logoNav{
-  
-  
-    text-decoration: none;
-    font-size: 1.3rem;
-    font-weight: 800;
-  
-    /*  */
-  
-    color:var(rgb(219, 210, 210));
-    transition: 250ms;
-  }
-  
-  header ul li{
-  
-    list-style:none;
-    margin:20px 0;
-  
-  }
-  
-  header ul li a{
-  
-    text-decoration: none;
-    padding:10px 30px;
-    font-size:1rem;
-    color:var(--grey);
-    transition: 250ms; 
-  }
-  
-  header ul li a:hover{
-  
-    color:var(--blue-dark);
-  
-  }
-  
-  
-  
-  .hamburger-on{
-      background: url('../assets/hamburger.svg');
-      width: 30px;
-      height: 30px;
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;  
-      cursor:pointer;
-      transition:250ms ease-in-out;
-      
-  }
-  
-  
-  .hamburger-off{
-  
-    padding:9px;
-    background:url('../assets/xsolid.svg');
-    background-size:contain;
-    background-repeat:no-repeat;
-    background-position:center;
-    width: 25px;
-    height: 25px;
+
+}
+
+
+.logoNav{
+
+
+  text-decoration: none;
+  font-size: 1.3rem;
+  font-weight: 800;
+
+  /*  */
+
+  color:var(rgb(219, 210, 210));
+  transition: 250ms;
+}
+
+header ul li{
+
+  list-style:none;
+  margin:20px 0;
+
+}
+
+header ul li a{
+
+  text-decoration: none;
+  padding:10px 30px;
+  font-size:1rem;
+  color:var(--grey);
+  transition: 250ms; 
+}
+
+header ul li a:hover{
+
+  color:var(--blue-dark);
+
+}
+
+
+
+.hamburger-on{
+    background: url('../assets/hamburger.svg');
+    width: 30px;
+    height: 30px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;  
     cursor:pointer;
     transition:250ms ease-in-out;
     
-  }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  /* För större skärm */
+}
 
+
+.hamburger-off{
+
+  padding:9px;
+  background:url('../assets/xsolid.svg');
+  background-size:contain;
+  background-repeat:no-repeat;
+  background-position:center;
+  width: 25px;
+  height: 25px;
+  cursor:pointer;
+  transition:250ms ease-in-out;
   
-  /* #endregion */
+}
+
+
+
+
+
+
+
+
+
+/* För större skärm */
+
+@media screen and (min-width:1000px){
+
+  .nav-links{
+
+    display:flex;
+    flex-direction: row;
+    position:unset;
+    width: auto;
+    height: auto;
+    background: none;
+
+  }
+
+  header ul{
+
+    display:flex;
+
+  }
+
+  header ul li{
+
+    margin:0;
+
+  }
+
+  header ul li a{
+
+    padding:0;
+    margin:5px 20px;
+    font-size:22px;
+
+  }
+
+  .hamburger-on{
+    display:none;
+  }
+
+  .logoNav{
+    font-size:23px;
+  }
+
+ 
+
+}
+
+
+@media (max-width: 984px) 
+{
+
+
+  .nav-links{
+
+    box-shadow: inset 0 3px 6px rgba(0,0,0,0.16), 0 4px 6px rgba(0,0,0,0.45);
+    border-radius: 10px;
+  
+  }
+
+ 
+
+}
+
+
+
+.rubrik{
+  text-align: center;
+  margin-top: 7%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 5%;
+}
+
+
+
+.container {
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  width: 100%;
+  max-width: 18rem;
+  margin: 1rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .card {
+    width: calc(50% - 2rem);
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .card {
+    width: calc(33.33% - 2rem);
+  }
+}
+
+.elias {
+  margin-left: 0;
+}
+
+
+#foot {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+}
+
+@media (max-width: 800px) 
+{
+
+  .rubrik{
+
+    margin-top: 15%;
+  }
+
+}
+
+
+
+#Info-Bot{
+  margin-top: 5%;
+  width: 100%;
+  margin-bottom: 3%;
+  
+}
+
+#gogoCol
+{
+  text-align: center;
+}
+
+
+#gogomaps{
+
+  width: fit-content;
+  
+}
+
+.list-group{
+  font-size: 20px;
+  width: 100%;
+  font-size: 15px;
+}
+
+.row{
+  width: 100%;
+}
+
+
+
+.image-wrapper {
+  width: 100%;
+  height: 70vh; /* set the height to 30% of the viewport height */
+  overflow: hidden;
+  text-align: center;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 768px) {
+  .image-wrapper {
+    height: 50vh;
+  }
+
+
+ 
+
+
+
+
+
+}
+
+
+#KontaktRubrik
+{
+
+    margin-top: 2%;
+    text-align: center;
+}
+
+
+
+/* #region Contact Form */
+
+
+.container {
+  max-width:400px;
+  width:100%;
+  margin:0 auto;
+  position:relative;
+  margin-top: -5%;
+}
+
+#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea, #contact button[type="submit"] { font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; }
+
+#contact {
+  background:#F9F9F9;
+  padding:25px;
+  margin:50px 0;
+}
+
+#contact h3 {
+  color: rgb(0, 0, 0);
+  display: block;
+  font-size: 30px;
+  font-weight: 400;
+}
+
+#contact h4 {
+  margin:5px 0 15px;
+  display:block;
+  font-size:13px;
+}
+
+fieldset {
+  border: medium none !important;
+  margin: 0 0 10px;
+  min-width: 100%;
+  padding: 0;
+  width: 100%;
+}
+
+#contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
+  width:100%;
+  border:1px solid #CCC;
+  background:#FFF;
+  margin:0 0 5px;
+  padding:10px;
+}
+
+#contact input[type="text"]:hover, #contact input[type="email"]:hover, #contact input[type="tel"]:hover, #contact input[type="url"]:hover, #contact textarea:hover {
+  -webkit-transition:border-color 0.3s ease-in-out;
+  -moz-transition:border-color 0.3s ease-in-out;
+  transition:border-color 0.3s ease-in-out;
+  border:1px solid #AAA;
+}
+
+#contact textarea {
+  height:100px;
+  max-width:100%;
+  resize:none;
+}
+
+#contact button[type="submit"] {
+  cursor:pointer;
+  width:100%;
+  border:none;
+  background:rgb(146, 152, 153);
+  color:#FFF;
+  margin:0 0 5px;
+  padding:10px;
+  font-size:15px;
+}
+
+#contact button[type="submit"]:hover {
+  background:rgb(160, 160, 160);
+  -webkit-transition:background 0.3s ease-in-out;
+  -moz-transition:background 0.3s ease-in-out;
+  transition:background-color 0.3s ease-in-out;
+}
+
+#contact button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
+
+#contact input:focus, #contact textarea:focus {
+  outline:0;
+  border:1px solid #999;
+}
+::-webkit-input-placeholder {
+ color:#888;
+}
+:-moz-placeholder {
+ color:#888;
+}
+::-moz-placeholder {
+ color:#888;
+}
+:-ms-input-placeholder {
+ color:#888;
+}
+
+
+
+/* #endregion */
+
+
