--- a/styles/omstyles.css
+++ b/styles/omstyles.css
@@ -428,18 +428,26 @@ fieldset {
 }
 
 #contact button[type="submit"] {
-  cursor:pointer;
-  width:100%;
-  border:none;
-  background:rgb(146, 152, 153);
-  color:#FFF;
-  margin:0 0 5px;
-  padding:10px;
-  font-size:15px;
+  background-color: rgba(207, 207, 207, 0.5);
+  border-radius: 100px;
+  box-shadow: rgba(118, 118, 118, 0.2) 0 -25px 18px -14px inset,
+    rgba(132, 132, 132, 0.15) 0 1px 2px,
+    rgba(110, 110, 110, 0.15) 0 2px 4px,
+    rgba(118, 119, 119, 0.15) 0 4px 8px,
+    rgba(133, 134, 134, 0.15) 0 8px 16px,
+    rgba(146, 146, 146, 0.15) 0 16px 32px;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+  padding: 7px 60px;
+  text-decoration: none;
+  transition: all 250ms;
+  border:0;
+  font-size: 12px;
 }
 
 #contact button[type="submit"]:hover {
-  background:rgb(160, 160, 160);
+  background:lightgreen;
   -webkit-transition:background 0.3s ease-in-out;
   -moz-transition:background 0.3s ease-in-out;
   transition:background-color 0.3s ease-in-out;
