--- a/styles/priserstyles.css
+++ b/styles/priserstyles.css
@@ -100,6 +100,35 @@ font-size: 20px;
 }
 
 
+.button-link {
+  background-color: rgba(207, 207, 207, 0.5);
+  border-radius: 100px;
+  box-shadow: rgba(118, 118, 118, 0.2) 0 -25px 18px -14px inset,
+    rgba(132, 132, 132, 0.15) 0 1px 2px,
+    rgba(110, 110, 110, 0.15) 0 2px 4px,
+    rgba(118, 119, 119, 0.15) 0 4px 8px,
+    rgba(133, 134, 134, 0.15) 0 8px 16px,
+    rgba(146, 146, 146, 0.15) 0 16px 32px;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+  padding: 7px 20px;
+  text-decoration: none;
+  transition: all 250ms;
+  border:0;
+  font-size: 12px;
+}
+
+.button-link:hover
+{
+  background-color: lightgreen;
+
+}
+
+
+
+
+
 .logoNav{
 
 
@@ -220,6 +249,31 @@ header ul li a:hover{
 }
 
 
+.konsultationRubrik
+{
+  text-align: center;
+  font-size: 19px;
+  margin-top: 5%;
+  margin-bottom: 2%;
+
+
+}
+
+.behandlingarRubrik
+{
+
+  text-align: center;
+  font-size: 19px;
+  margin-top: 5%;
+  margin-bottom: 2%;
+}
+
+
+
+
+
+
+
 @media (max-width: 800px) 
 {
 
@@ -228,8 +282,6 @@ header ul li a:hover{
 
     box-shadow: inset 0 3px 6px rgba(0,0,0,0.16), 0 4px 6px rgba(0,0,0,0.45);
     border-radius: 10px;
-  
-
 
   }
 
@@ -242,22 +294,19 @@ header ul li a:hover{
 
 
 
-
-
-
-
-
 /*#endregion  */
 
 
 .accordion
 {
-  margin-top: 5%;
+  margin-top: 0%;
 }
 
 .accordion-item
 {
-  width: 100%;
+  margin-left: 25%;
+  text-align: center;
+  width: 50%;
 }
 
 .accordion-header button {
@@ -289,6 +338,19 @@ img {
   .image-wrapper {
     height: 50vh;
   }
+
+  .accordion-item
+  {
+    margin-left: 0%;
+    text-align: center;
+    width: 100%;
+  }
+
+
+
+
+
+
 }
 
 #prisrubrik{
