--- a/styles/styles.css
+++ b/styles/styles.css
@@ -336,21 +336,8 @@ i{
 }
 
 .introBtn {
-  cursor: pointer;
-  background-color: transparent;
-  text-decoration: none;
-  text-decoration-color: #616466;
 
-}
-
-
-
-.Liseberg .button-33 {
-  position: absolute;
-  top: 50%; /* adjust as needed */
-  left: 30%; /* adjust as needed */
-  transform: translate(-50%, -50%); /* center the button */
-  background-color: #cfcfcf;
+  background-color: rgba(207, 207, 207, 0.5);
   border-radius: 100px;
   box-shadow: rgba(118, 118, 118, 0.2) 0 -25px 18px -14px inset,
     rgba(132, 132, 132, 0.15) 0 1px 2px,
@@ -360,37 +347,34 @@ i{
     rgba(146, 146, 146, 0.15) 0 16px 32px;
   color: rgb(255, 255, 255);
   cursor: pointer;
-  display: inline-block;
   font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
   padding: 7px 20px;
-  text-align: center;
   text-decoration: none;
   transition: all 250ms;
-  border: 0;
-  font-size: 1.5vw; /* adjust as needed */
+  border:0;
+  font-size: 12px;
+    margin-left: 1;
+    margin-top: 1%;
+
+   
+
+
 }
-.a {
-  color: black;
-  text-decoration: none;
+
+
+#introBtnBox
+{
+  margin-top:3%;
 }
 
 
 @media (max-width: 800px) {
-  .Liseberg .button-33 
-  {
-    
-    top: 20%; /* adjust as needed */
-    left: 50%; /* adjust as needed */
-    transform: translate(-50%, -70%); /* center the button */
-    font-size: 3vw; /* adjust as needed */
-    padding: 5px 10px; /* adjust as needed */
-    text-decoration: none;
-
-  }
+  
 
 
     /* 3D EFFECT på hamburgarmenyn*/
-  .nav-links{
+  .nav-links
+  {
 
     box-shadow: inset 0 3px 6px rgba(0,0,0,0.16), 0 4px 6px rgba(0,0,0,0.45);
     border-radius: 10px;
@@ -398,9 +382,11 @@ i{
 
 
   }
+  #introBtnBox
+  {
+  margin-top:4%;
+  }
  
-
-
 
 
 }
