Inserted new textvalue

--- a/styles/behandlingarstyles.css
+++ b/styles/behandlingarstyles.css
@@ -25,6 +25,8 @@ header{
   transition:250ms;
   z-index:10;  
   background-color:whitesmoke;
+  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+
 }
 
 header h4{
@@ -414,23 +416,7 @@ header h4{
     padding-left: 5%;
 
   }
-
-
-
-
-
-
-
-
-
 }
-
-
-
-
-
-
-
 
 
 
