--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,7 @@ header{
   transition:250ms;
   z-index:10;  
   background-color:whitesmoke;
-
+  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
 
 
 }
