--- a/styles/styles.css
+++ b/styles/styles.css
@@ -253,13 +253,6 @@ header ul li a:hover{
   .logoNav{
     font-size:20px;
   }
-
-
-
-  /* Mobilainställningar ;) */
-
-
-
 }
 
 
@@ -295,6 +288,24 @@ i{
   background-color: white;
 }
 
+@media screen and (min-width: 768px) {
+  #linkBar {
+    font-size: 17px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  #linkBar {
+    font-size: 17px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  #linkBar{
+    font-size: 22px;
+  }
+}
+
 
 
 
@@ -311,7 +322,7 @@ i{
 }
 
 #carouselExampleInterval img {
-  height: 500px; /* adjust the height as desired */
+  height: 60%; /* adjust the height as desired */
   width: 100%;
   object-fit: cover; /* to ensure the image fills the container */
 }
@@ -319,10 +330,25 @@ i{
 .Liseberg
 {
   position: relative;
-  margin-top: 4%;
+  margin-top:4%;
   width: 100%;
   height: auto;
 }
+
+
+/* Media query for bigger screens */
+@media only screen and (min-width: 1200px) {
+ 
+  #carouselExampleInterval img {
+    height: 60vh; /* adjust the height as desired */
+    width: 100%;
+  }
+    .Liseberg
+  {
+    margin-top:3%;
+  }
+}
+
 
 
 .text-div {
@@ -336,7 +362,6 @@ i{
 }
 
 .introBtn {
-
   background-color: rgba(207, 207, 207, 0.5);
   border-radius: 100px;
   box-shadow: rgba(118, 118, 118, 0.2) 0 -25px 18px -14px inset,
@@ -351,15 +376,44 @@ i{
   padding: 7px 20px;
   text-decoration: none;
   transition: all 250ms;
-  border:0;
+  border: 0;
   font-size: 12px;
-    margin-left: 1;
-    margin-top: 1%;
-
-   
-
-
+  margin-left: 1;
+  margin-top: 1%;
 }
+
+.introBtn:hover
+{
+  font-size: 14px;
+}
+
+@media (min-width: 800px) {
+  .introBtn {
+    font-size: 16px;
+    padding: 10px 30px;
+  }
+}
+
+@media (max-width: 600px) {
+  .introBtn {
+    font-size: 14px;
+    padding: 5px 15px;
+  }
+  .introBtnBox{
+    padding-bottom: 10%;
+  }
+  .text-div{
+    top: 70%;
+  }
+}
+
+
+
+
+
+
+
+
 
 
 #introBtnBox
@@ -368,9 +422,8 @@ i{
 }
 
 
-@media (max-width: 800px) {
-  
 
+@media (max-width: 800px) {
 
     /* 3D EFFECT på hamburgarmenyn*/
   .nav-links
@@ -379,28 +432,9 @@ i{
     box-shadow: inset 0 3px 6px rgba(0,0,0,0.16), 0 4px 6px rgba(0,0,0,0.45);
     border-radius: 10px;
   
-
-
   }
-  #introBtnBox
-  {
-  margin-top:4%;
-  }
- 
-
-
 }
-
-
-
-
-
-
-
-
-
   /* #endregion */
-
 
   /* #region beatuylawBox */
 
@@ -417,6 +451,23 @@ i{
     flex-wrap: wrap;
   }
 
+  @media screen and (min-width: 768px) {
+    .beautylawBox {
+      font-size: 18px;
+    }
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .beautylawBox {
+      font-size: 22px;
+    }
+  }
+  
+  @media screen and (min-width: 1200px) {
+    .beautylawBox {
+      font-size: 28px;
+    }
+  }
 
 
 
@@ -560,6 +611,34 @@ i{
   
   }
 
+  @media (max-width: 800px)  {
+
+    #rubrikbeautyLaw {
+      font-size: 20px;
+    }
+  }
+ 
+
+
+
+  @media screen and (min-width: 768px) {
+    #rubrikbeautyLaw {
+      font-size: 24px;
+    }
+  }
+  
+  @media screen and (min-width: 1024px) {
+    #rubrikbeautyLaw {
+      font-size: 28px;
+    }
+  }
+  
+  @media screen and (min-width: 1200px) {
+    #rubrikbeautyLaw {
+      font-size: 32px;
+    }
+  }
+
   #footerDiv
   {
     margin-top: 0%;
@@ -592,18 +671,32 @@ i{
     width: 100%;
   }
 
-  #gogoCol
-  {
+  #gogoCol {
     text-align: center;
   }
-
-
-  #gogomaps{
-
-    width: auto;
-    height: auto;
-    
+  
+  #gogomaps {
+    width: 400px;
+    height: 250px;
   }
+  
+  @media screen and (min-width: 768px) {
+    #gogomaps {
+      width: 600px;
+      height: 400px;
+    }
+  }
+  
+  @media screen and (min-width: 1200px) {
+    #gogomaps {
+      width: 800px;
+      height: 500px;
+    }
+  }
+  
+
+
+
 
   .list-group{font-size: 20px;}
  
