--- a/styles/behandlingarstyles.css
+++ b/styles/behandlingarstyles.css
@@ -66,10 +66,9 @@ header h4{
     position:absolute;
     right:0;
     top: 5vh;
-    width: 60%;
-    height:70vh;
-    background: rgb(217, 213, 213);
-  
+    width: 40%;
+    height:60vh;
+    background: whitesmoke;
     display:none;
     flex-direction: column;
     justify-content: center;
@@ -80,9 +79,7 @@ header h4{
   
   
   .show-navlinks{
-  
     display: flex;
-  
   }
   
   
@@ -104,7 +101,6 @@ header h4{
   
   
   .logoNav{
-  
   
     text-decoration: none;
     font-size: 1.3rem;
