--- a/styles/styles.css
+++ b/styles/styles.css
@@ -659,9 +659,12 @@ i{
 
   #Info-Bot{
     width: 90%;
+    margin: 0 auto;
+    
   }
 
   #gogomaps {
+    
     width: 100%;
     height: 250px;
   }
