--- a/styles/styles.css
+++ b/styles/styles.css
@@ -658,7 +658,7 @@ i{
 
 
   #Info-Bot{
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     
   }
@@ -671,13 +671,19 @@ i{
   
   @media screen and (min-width: 768px) {
     #gogomaps {
+      width: 100%;
       height: 400px;
+      margin: 0 auto;
+
     }
   }
   
   @media screen and (min-width: 1200px) {
     #gogomaps {
+      width: 100%;
       height: 500px;
+      margin: 0 auto;
+
     }
   }
   
