--- a/styles/omstyles.css
+++ b/styles/omstyles.css
@@ -6,7 +6,6 @@
   font-family: 'Poppins', sans-serif;
 }
 
-/* Ta bort nedan om det inte gör ngt */
 body{
 width: 100%;
 }
@@ -78,9 +77,7 @@ header h4{
 
 
 .show-navlinks{
-
   display: flex;
-
 }
 
 
@@ -103,9 +100,12 @@ header h4{
 
 .logoNav{
 
+
   text-decoration: none;
   font-size: 1.3rem;
   font-weight: 800;
+
+
   color:var(rgb(219, 210, 210));
   transition: 250ms;
 }
@@ -167,8 +167,6 @@ header ul li a:hover{
 
 
 
-
-
 /* För större skärm */
 
 @media screen and (min-width:1000px){
@@ -181,7 +179,6 @@ header ul li a:hover{
     width: auto;
     height: auto;
     background: none;
-
   }
 
   header ul{
@@ -200,8 +197,7 @@ header ul li a:hover{
 
     padding:0;
     margin:5px 20px;
-    font-size:22px;
-
+    font-size:28px;
   }
 
   .hamburger-on{
@@ -209,9 +205,10 @@ header ul li a:hover{
   }
 
   .logoNav{
-    font-size:20px;
+    font-size:25px;
   }
 }
+
 
 @media (max-width: 984px) 
 {
@@ -221,13 +218,23 @@ header ul li a:hover{
     border-radius: 10px;
   
   }
+
+  .images
+  {
+    width: 50%;
+    height: auto;
+  } 
+
 }
 
 .images
 {
-  width: 50%;
+  width: 80%;
   height: auto;
 }
+
+
+
 
 .lead{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -255,12 +262,12 @@ header ul li a:hover{
 
 #reviewCarousel {
   width: 100%;
-  max-width: 80%;
+  max-width: 100%;
   margin: 0 auto;
 }
 
 .carousel-inner {
-  font-size: 12px;
+  font-size: 19px;
   text-align: left;
 }
 
@@ -276,8 +283,6 @@ header ul li a:hover{
 }
 
 
-
-
 .rubrik{
   text-align: center;
   margin-top: 7%;
@@ -285,7 +290,6 @@ header ul li a:hover{
   margin-right: 5%;
   margin-bottom: 5%;
 }
-
 
 
 .container {
@@ -325,6 +329,9 @@ header ul li a:hover{
 
 @media (max-width: 800px) 
 {
+
+
+
 
   .rubrik{
 
@@ -383,14 +390,6 @@ img {
   .image-wrapper {
     height: 50vh;
   }
-
-
- 
-
-
-
-
-
 }
 
 
