--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,29 +47,29 @@ header h4{
 .intro{
 
     /* z-index är 1 mer än header(se ovan). Introt överlappar alltså menyn och menyn (header) överlappar allt innehåll i sidan som bilder osv.. */
-    position:fixed;
+    position: fixed;
     z-index: 100;
-    left:0;
-    top:0;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(#616466, rgb(252, 252, 252));
     transition: 1s;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .logo-header{
 
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    position: relative;
     color: #ffff;
+    font-size: 70px;
 }
 
 .logo{
 
-    position:relative;
+    position: relative;
     display: inline-block;
     bottom: -20px;
     opacity: 0;
@@ -572,10 +572,8 @@ i{
 
 
   /* Clinic på intro */
-  #logoCText{
-    top: 40px;
-    right: 50%;
-  }
+  /* #logoCText{
+  } */
  
   #behandlingarRubrik
   {
