--- a/styles/behandlingarstyles.css
+++ b/styles/behandlingarstyles.css
@@ -81,23 +81,17 @@ header h4{
     display: flex;
   }
   
-  
+    
   @keyframes menu_animation{
-  
     from{
-  
       opacity:0;
-      tranform:translateX(100%);
-  
+      transform:translateX(100%);
     }
-  
     to{
       opacity:1;
-      tranform:translateX(0%);
+      transform:translateX(0%);
     }
-  
   }
-  
   
   .logoNav{
 
