--- a/styles/priserstyles.css
+++ b/styles/priserstyles.css
@@ -83,22 +83,17 @@ header h4{
 
 }
 
-
 @keyframes menu_animation{
-
   from{
-
     opacity:0;
-    tranform:translateX(100%);
-
+    transform:translateX(100%);
   }
-
   to{
     opacity:1;
-    tranform:translateX(0%);
+    transform:translateX(0%);
   }
-
 }
+
 
 
 .button-link {
@@ -125,8 +120,6 @@ header h4{
   background-color: lightgreen;
 
 }
-
-
 
 
 
@@ -232,7 +225,7 @@ header ul li a:hover{
 
     padding:0;
     margin:5px 20px;
-    font-size:22px;
+    font-size:1rem;
 
   }
 
