--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,6 +58,8 @@ header h4{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column; /* Stack the content vertically */
+
 }
 
 .logo-header{
@@ -65,6 +67,9 @@ header h4{
     position: relative;
     color: #ffff;
     font-size: 70px;
+    display: flex;
+    flex-direction: column; /* Stack the words vertically */
+    align-items: center; /* Center the words horizontally */
 }
 
 .logo{
@@ -76,14 +81,14 @@ header h4{
 }
 
 .logo.active{
-    bottom: 0;
+    bottom: -20px; /* Adjust the positioning */
     opacity: 1;
     transition: ease-in-out 0.5s;
 }
 
 .logo.fade{
 
-    bottom: 150px;
+    bottom: 30px; /* Adjust the positioning */
     opacity: 0;
     transition: ease-in-out 0.5s;
 
@@ -118,19 +123,14 @@ header h4{
 
 
 @keyframes menu_animation{
-
   from{
-
     opacity:0;
-    tranform:translateX(100%);
-
+    transform:translateX(100%);
   }
-
   to{
     opacity:1;
-    tranform:translateX(0%);
+    transform:translateX(0%);
   }
-
 }
 
 
@@ -463,7 +463,7 @@ i{
   @media screen and (min-width: 1200px) {
     .beautylawBox {
       font-size: 22px;
-    }
+    } 
   }
 
 
