--- a/styles/styles.css
+++ b/styles/styles.css
@@ -78,6 +78,7 @@ header h4{
     display: inline-block;
     bottom: -20px;
     opacity: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 .logo.active{
@@ -139,7 +140,7 @@ header h4{
 
   text-decoration: none;
   font-size: 1.3rem;
-  font-weight: 800;
+  font-weight: 500;
 
   color:var(rgb(219, 210, 210));
   transition: 250ms;
